--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "proyectobackend",
   "version": "1.0.0",
   "description": "",
-  "main": "ensayo.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon app.js"
+    "start:dev": "nodemon src/app.js",
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
@@ -22,6 +23,9 @@
   "dependencies": {
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
-    "multer": "^1.4.5-lts.1"
+    "express-handlebars": "^7.0.6",
+    "handlebars": "^4.7.7",
+    "multer": "^1.4.5-lts.1",
+    "nodemon": "^2.0.22"
   }
 }
