--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express-handlebars": "^7.0.6",
     "handlebars": "^4.7.7",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "socket.io": "^4.6.1"
   }
 }
